# aivchat

./: .gitignore  Cargo.toml  README.md  app.toml
src/: chat.rs  config.rs  main.rs  transcribe.rs  utils.rs  voice.rs  vumeter.rs
