[package]
name = "aivchat"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
iced = { git = "https://github.com/iced-rs/iced/" , features=["tokio", "advanced","sipper","svg","canvas","markdown"] }
tokio = { version = "^1.40.*", features=["full"] }
tokio-stream = "0.1.17"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
rayon = "1.10.0"
pv_recorder = "1.2.6"
whisper-rs = { version = "0.14.2", features = ["vulkan", "hipblas"] }
iced_futures = { version = "0.13.2", features = ["tokio"] }
anyhow = "1.0.98"
openai = "1.1.0"
elevenlabs_rs = "0.6.0"
async-channel = "2.3.1"
